third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/spec/table-9-1.stderr
TOML parse error at line 6, column 1
  |
6 | [fruit.apple.taste]  # INVALID
  | ^
invalid table header
duplicate key `taste` in table `fruit.apple`
